// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrainCard > snapshots > matches snapshot for cancelled train 1`] = `
<div
  class="rounded-xl transition-opacity duration-700 ease-in-out "
  style="opacity: 1;"
>
  <div
    class="relative overflow-hidden rounded-xl shadow-[0_2px_8px_rgba(0,0,0,0.08),0_1px_2px_rgba(0,0,0,0.06)] border border-gray-200 dark:border-gray-600 dark:shadow-[0_4px_16px_rgba(0,0,0,0.4)]"
  >
    <div
      aria-hidden="true"
      class="absolute inset-y-0 left-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-y-0 right-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      class="card rounded-xl relative bg-gradient-to-br from-white to-gray-50 dark:bg-none dark:bg-gray-800 bg-gradient-to-br from-red-50 to-red-100 dark:from-red-950 dark:to-red-900 border-red-300 dark:border-red-800 w-full max-w-full text-left relative select-none "
      data-train-cancelled="true"
      data-train-line="A"
      data-train-number="123"
      data-train-unknown-delay="false"
      style="animation-delay: -0ms; -webkit-tap-highlight-color: transparent;"
    >
      <div
        class="card-body p-3 sm:p-4"
      >
        <div
          class="flex items-start justify-between gap-2 sm:gap-4 min-h-[76px] sm:min-h-20"
        >
          <div
            class="flex items-center gap-3 sm:gap-4 flex-1 min-w-0 overflow-hidden"
          >
            <button
              aria-label="favorite"
              class="flex-shrink-0 h-14 w-14 sm:h-16 sm:w-16 flex items-center justify-center text-xl font-bold rounded-2xl shadow-brand-medium transition-transform duration-300 relative group touch-manipulation select-none focus:outline-none border-none ring-0 bg-gradient-to-br from-red-500 to-red-600 text-white"
              type="button"
            >
              A
            </button>
            <div
              class="space-y-2 sm:space-y-1 min-w-0 flex-1 overflow-hidden"
            >
              <div
                class="card-title p-0 flex-col items-start gap-1"
              >
                <div
                  class="flex flex-col gap-2 sm:gap-1 w-full"
                >
                  <span
                    class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-gray-100 min-w-0 flex flex-col sm:flex-row items-start sm:items-center gap-1 sm:gap-2 sm:flex-wrap"
                  >
                    <span
                      class="text-base-content/70 text-sm sm:text-xl whitespace-nowrap"
                    >
                      <time
                        datetime="2024-03-20T10:00:00.000Z"
                      >
                        12.00
                      </time>
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-right mx-1 sm:mx-2"
                      />
                      <time
                        datetime="2024-03-20T11:00:00.000Z"
                      >
                        13.00
                      </time>
                    </span>
                    <output
                      aria-hidden="true"
                      aria-live="polite"
                      class="badge badge-warning badge-sm font-semibold invisible"
                    >
                      +0 min
                    </output>
                  </span>
                  <output
                    aria-hidden="true"
                    class="text-sm sm:text-base font-medium flex items-center truncate text-base-content/60 opacity-0 pointer-events-none select-none"
                  >
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-clock mr-1"
                    />
                    <span>
                      1
                      h 
                      0
                      m
                    </span>
                  </output>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-end gap-2 sm:gap-3 flex-shrink-0 min-h-[76px] sm:min-h-20 justify-start"
          >
            <span
              class="badge badge-error badge-lg text-white"
            >
              Peruttu
            </span>
            <div
              aria-hidden="true"
              class="badge badge-success badge-lg gap-2 font-semibold sm:h-8 sm:px-4 invisible"
            >
              <span>
                0 min
              </span>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Peruttu
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TrainCard > snapshots > matches snapshot for highlighted train 1`] = `
<div
  class="rounded-xl transition-opacity duration-700 ease-in-out "
  style="opacity: 1;"
>
  <div
    class="relative overflow-hidden rounded-xl shadow-[0_2px_8px_rgba(0,0,0,0.08),0_1px_2px_rgba(0,0,0,0.06)] border border-gray-200 dark:border-gray-600 dark:shadow-[0_4px_16px_rgba(0,0,0,0.4)]"
  >
    <div
      aria-hidden="true"
      class="absolute inset-y-0 left-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-y-0 right-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      class="card rounded-xl relative bg-gradient-to-br from-white to-gray-50 dark:bg-none dark:bg-gray-800 animate-soft-blink dark:animate-soft-blink-dark w-full max-w-full text-left relative select-none "
      data-train-cancelled="false"
      data-train-line="A"
      data-train-number="123"
      data-train-unknown-delay="false"
      style="animation-delay: -0ms; -webkit-tap-highlight-color: transparent;"
    >
      <div
        class="card-body p-3 sm:p-4"
      >
        <div
          class="flex items-start justify-between gap-2 sm:gap-4 min-h-[76px] sm:min-h-20"
        >
          <div
            class="flex items-center gap-3 sm:gap-4 flex-1 min-w-0 overflow-hidden"
          >
            <button
              aria-label="favorite"
              class="flex-shrink-0 h-14 w-14 sm:h-16 sm:w-16 flex items-center justify-center text-xl font-bold rounded-2xl shadow-brand-medium transition-transform duration-300 relative group touch-manipulation select-none focus:outline-none border-none ring-0 bg-[#8c4799] text-white"
              type="button"
            >
              A
            </button>
            <div
              class="space-y-2 sm:space-y-1 min-w-0 flex-1 overflow-hidden"
            >
              <div
                class="card-title p-0 flex-col items-start gap-1"
              >
                <div
                  class="flex flex-col gap-2 sm:gap-1 w-full"
                >
                  <span
                    class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-gray-100 min-w-0 flex flex-col sm:flex-row items-start sm:items-center gap-1 sm:gap-2 sm:flex-wrap"
                  >
                    <span
                      class="text-base-content/70 text-sm sm:text-xl whitespace-nowrap"
                    >
                      <time
                        datetime="2024-03-20T10:00:00.000Z"
                      >
                        12.00
                      </time>
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-right mx-1 sm:mx-2"
                      />
                      <time
                        datetime="2024-03-20T11:00:00.000Z"
                      >
                        13.00
                      </time>
                    </span>
                    <output
                      aria-hidden="true"
                      aria-live="polite"
                      class="badge badge-warning badge-sm font-semibold invisible"
                    >
                      +0 min
                    </output>
                  </span>
                  <output
                    aria-label="Kesto 1 tuntia 0 minuuttia"
                    class="text-sm sm:text-base font-medium flex items-center truncate text-base-content/60 "
                  >
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-clock mr-1"
                    />
                    <span>
                      1
                      h 
                      0
                      m
                    </span>
                  </output>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-end gap-2 sm:gap-3 flex-shrink-0 min-h-[76px] sm:min-h-20 justify-start"
          >
            <div
              class="indicator"
            >
              <button
                aria-label="Raide 1. clickToSeeArrivalTrack"
                aria-pressed="false"
                class="group cursor-pointer focus-ring bg-transparent border-0 p-0"
                type="button"
              >
                <div
                  class="relative inline-block"
                  style="perspective: 1000px; min-height: 32px;"
                >
                  <div
                    style="transform-style: preserve-3d; transform: rotateY(0deg); transition: transform 0.4s ease-out; position: relative; min-height: 32px;"
                  >
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden;"
                    >
                      Raide
                       
                      1
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-rotate-left ml-1.5 text-xs opacity-60"
                      />
                    </div>
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden; transform: rotateY(180deg); position: absolute; top: 0px; left: 0px; right: 0px;"
                    >
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-right mr-1"
                      />
                      Raide
                       
                      2
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              aria-hidden="false"
              class="badge badge-success badge-lg gap-2 font-semibold sm:h-8 sm:px-4 "
            >
              <span>
                5 min
              </span>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Lähtee pian
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TrainCard > snapshots > matches snapshot for normal train 1`] = `
<div
  class="rounded-xl transition-opacity duration-700 ease-in-out "
  style="opacity: 1;"
>
  <div
    class="relative overflow-hidden rounded-xl shadow-[0_2px_8px_rgba(0,0,0,0.08),0_1px_2px_rgba(0,0,0,0.06)] border border-gray-200 dark:border-gray-600 dark:shadow-[0_4px_16px_rgba(0,0,0,0.4)]"
  >
    <div
      aria-hidden="true"
      class="absolute inset-y-0 left-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-y-0 right-0 w-16 flex items-center justify-center transition-opacity duration-150 bg-pink-500 dark:bg-pink-600 opacity-0"
    >
      <svg
        aria-label="Heart"
        class="w-6 h-6 text-white"
        fill="currentColor"
        role="img"
        stroke="currentColor"
        strokeWidth="0"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      class="card rounded-xl relative bg-gradient-to-br from-white to-gray-50 dark:bg-none dark:bg-gray-800 animate-soft-blink dark:animate-soft-blink-dark w-full max-w-full text-left relative select-none "
      data-train-cancelled="false"
      data-train-line="A"
      data-train-number="123"
      data-train-unknown-delay="false"
      style="animation-delay: -0ms; -webkit-tap-highlight-color: transparent;"
    >
      <div
        class="card-body p-3 sm:p-4"
      >
        <div
          class="flex items-start justify-between gap-2 sm:gap-4 min-h-[76px] sm:min-h-20"
        >
          <div
            class="flex items-center gap-3 sm:gap-4 flex-1 min-w-0 overflow-hidden"
          >
            <button
              aria-label="favorite"
              class="flex-shrink-0 h-14 w-14 sm:h-16 sm:w-16 flex items-center justify-center text-xl font-bold rounded-2xl shadow-brand-medium transition-transform duration-300 relative group touch-manipulation select-none focus:outline-none border-none ring-0 bg-[#8c4799] text-white"
              type="button"
            >
              A
            </button>
            <div
              class="space-y-2 sm:space-y-1 min-w-0 flex-1 overflow-hidden"
            >
              <div
                class="card-title p-0 flex-col items-start gap-1"
              >
                <div
                  class="flex flex-col gap-2 sm:gap-1 w-full"
                >
                  <span
                    class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-gray-100 min-w-0 flex flex-col sm:flex-row items-start sm:items-center gap-1 sm:gap-2 sm:flex-wrap"
                  >
                    <span
                      class="text-base-content/70 text-sm sm:text-xl whitespace-nowrap"
                    >
                      <time
                        datetime="2024-03-20T10:00:00.000Z"
                      >
                        12.00
                      </time>
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-right mx-1 sm:mx-2"
                      />
                      <time
                        datetime="2024-03-20T11:00:00.000Z"
                      >
                        13.00
                      </time>
                    </span>
                    <output
                      aria-hidden="true"
                      aria-live="polite"
                      class="badge badge-warning badge-sm font-semibold invisible"
                    >
                      +0 min
                    </output>
                  </span>
                  <output
                    aria-label="Kesto 1 tuntia 0 minuuttia"
                    class="text-sm sm:text-base font-medium flex items-center truncate text-base-content/60 "
                  >
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-clock mr-1"
                    />
                    <span>
                      1
                      h 
                      0
                      m
                    </span>
                  </output>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-end gap-2 sm:gap-3 flex-shrink-0 min-h-[76px] sm:min-h-20 justify-start"
          >
            <div
              class="indicator"
            >
              <button
                aria-label="Raide 1. clickToSeeArrivalTrack"
                aria-pressed="false"
                class="group cursor-pointer focus-ring bg-transparent border-0 p-0"
                type="button"
              >
                <div
                  class="relative inline-block"
                  style="perspective: 1000px; min-height: 32px;"
                >
                  <div
                    style="transform-style: preserve-3d; transform: rotateY(0deg); transition: transform 0.4s ease-out; position: relative; min-height: 32px;"
                  >
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden;"
                    >
                      Raide
                       
                      1
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-rotate-left ml-1.5 text-xs opacity-60"
                      />
                    </div>
                    <div
                      class="badge badge-lg font-semibold transition-all duration-200 bg-gray-100 text-gray-700 border border-gray-300 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 group-hover:bg-gray-200 dark:group-hover:bg-gray-600 group-hover:scale-105 whitespace-nowrap"
                      style="backface-visibility: hidden; transform: rotateY(180deg); position: absolute; top: 0px; left: 0px; right: 0px;"
                    >
                      <i
                        aria-hidden="true"
                        class="fa-solid fa-arrow-right mr-1"
                      />
                      Raide
                       
                      2
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              aria-hidden="false"
              class="badge badge-success badge-lg gap-2 font-semibold sm:h-8 sm:px-4 "
            >
              <span>
                5 min
              </span>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Lähtee pian
        </div>
      </div>
    </div>
  </div>
</div>
`;
